--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 authors = ["Steven Brodhead <keldor314@gmail.com>"]
 
 [dependencies]
+vulkano = "0.10.0"
+vulkano-win = "0.10.0"
+cgmath = "0.16.1"
+image = "0.19.0"
+winit = "0.17.2"
+time = "0.1.40"
+openvr = "0.5.2"
